# AutomotiveCppBaseCampTesting

./: .gitignore  Makefile  README.md
course/1/: CMakeLists.txt  main.cpp  readme.md
incoming /src/: clock.cpp  clock.h  main.cpp  ntp-client.cpp
incoming /test/: clock_gTest.cpp
mentor/example1/: CMakeLists.txt  main.cpp
mentor/task2/: main.cpp  procOutput.txt  readme.md
mentor/task3/: main.cpp  output.txt  readme.md
mentor/task4/: main.cpp  readme.md
mentor/task5/: main.cpp  readme.md
src/: ntp-client.h
